--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>titulo</title>
 </head>
 <body>
-    <h3>SOUT consolog</h3>
-    <h1>hola soy boris la rama de boris</h1>
-    <h1>subida</h1>
+    <h1>hola</h1>
 </body>
 </html>
